# local-agent-orchestrator

./: .gitignore  README.md  config.example.toml  pyproject.toml  spec.md
docs/: setup-guide.md
src/orchestra/: __init__.py  agent_summary.py  agents.py  asana.py  cli.py  config.py  gitops.py  models.py  orchestrator.py  prompts.py  review.py  verification.py
tests/: test_agent_summary.py  test_asana.py  test_config.py  test_gitops.py  test_orchestrator.py  test_review.py
