[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-orchestra"
version = "0.1.0"
description = "Local Asana-driven orchestration for Codex and Claude Code CLI workers."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Local Orchestra Contributors" }]
dependencies = []

[project.scripts]
orchestra = "orchestra.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

